SERVER-40589 Disallow $_internalReadAtClusterTime with null timestamp.