src/mongo/db/commands/find_cmd.cpp
@@ -291,6 +291,11 @@ public:
             // collection via AutoGetCollectionForRead in order to ensure the comparison to the
             // collection's minimum visible snapshot is accurate.
             if (auto targetClusterTime = qr->getReadAtClusterTime()) {
+                uassert(ErrorCodes::InvalidOptions,
+                        str::stream() << "$_internalReadAtClusterTime value must not be a null"
+                                         " timestamp.",
+                        !targetClusterTime->isNull());
+
                 // We aren't holding the global lock in intent mode, so it is possible after
                 // comparing 'targetClusterTime' to 'lastAppliedOpTime' for the last applied opTime
                 // to go backwards or for the term to change due to replication rollback. This isn't
